# ci-bridge

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHECKS  Dockerfile  GITLAB_GITHUB_BRIDGE_SETUP.md  Justfile  Procfile  README.md  Session.vim  docker-compose.yml  noxfile.py  pyproject.toml  test-webhook.sh  webhook-handler.py
.github/workflows/: build.yml  ci.yml  gitlab-trigger.yml
docs/: GITLAB_TO_GITHUB_TRIGGERING.md
src/ci_relay/: config.py  exceptions.py  github.py  gitlab.py  metrics.py  signature.py  utils.py  web.py
src/ci_relay/github/: models.py  router.py  utils.py
src/ci_relay/gitlab/: __init__.py  models.py  router.py  utils.py
tests/: __init__.py  conftest.py  test_github.py  test_github_comment.py  test_github_models.py  test_gitlab.py  test_gitlab_to_github_triggering.py  test_gitlab_utils.py  test_web.py
tests/samples/: check_suite_requested.json  check_suite_rerequested.json  issue_comment_created_issue.json  issue_comment_created_pr.json  job_hook.json  pr_api_response.json  pull_request_synchronize.json  push.json
