[project]
name = "ci-relay"
version = "0.1.0"
description = ""
authors = [{name="Paul Gessinger", email="hello@paulgessinger.com"}]

requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.11",
    "cachetools>=5.5.0",
    "gidgethub>=5.3.0",
    "gidgetlab>=2.0.1",
    "pysmee>=0.1.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "sanic>=24.12.0",
    "uvicorn>=0.34.0",
]

[tool.pyright]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
