[project]
name = "ci-relay"
version = "0.1.0"
description = ""
authors = [{name="Paul Gessinger", email="hello@paulgessinger.com"}]

requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.11",
    "aiolimiter>=1.2.1",
    "cachetools>=5.5.0",
    "gidgethub>=5.3.0",
    "gidgetlab>=2.0.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pysmee>=0.1.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "sanic>=24.12.0",
    "uvicorn>=0.34.0",
]

[tool.pyright]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "ruff>=0.7.3",
    "pytest-asyncio>=0.23.5",
    "pytest-sanic>=1.9.1",
    "sanic-testing>=24.6.0",
    "pytest-aiohttp>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
